--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "webpack-example",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "webpack-serve"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Brent Jackson",
+  "license": "MIT",
   "dependencies": {
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4",
     "webpack-serve": "^1.0.2"
