--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.4",
     "webpack-serve": "^1.0.2"
+  },
+  "devDependencies": {
+    "ava": "^0.25.0",
+    "nyc": "^11.8.0"
   }
 }
