--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-serve"
+    "start": "webpack-serve --port 8989",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.4",
-    "webpack-serve": "^1.0.2"
+    "html-webpack-plugin": "^3.2.0",
+    "mini-html-webpack-plugin": "^0.2.3",
+    "prerender-loader": "^1.0.0",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-serve": "^1.0.4",
+    "webpack-serve-overlay": "^0.2.2"
   },
   "devDependencies": {
     "ava": "^0.25.0",
-    "nyc": "^11.8.0"
+    "nyc": "^11.9.0"
   }
 }
